--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=felipihsc@gmail.com
 default.recipient=felipihsc@gmail.com
