--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			<scope>test</scope>
 		</dependency>
 
-
+			
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,7 +65,10 @@
 		</dependency>
 
 
-
+		<dependency>
+			 <groupId>org.springframework.boot</groupId>
+ 			 <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 
 
